# android-opencv-opengl-assessment

./: README.md
app/: build.gradle.kts  settings.gradle.kts
app/app/: build.gradle.kts
app/app/src/androidTest/java/com/faraz/assessment/: ExampleInstrumentedTest.kt
app/app/src/main/: AndroidManifest.xml
app/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/app/src/main/java/com/faraz/assessment/: MainActivity.kt  NativeBridge.kt
app/app/src/main/java/com/faraz/assessment/ui/theme/: Color.kt  Theme.kt  Type.kt
app/app/src/main/res/: activity_main.xml
app/app/src/main/res/values/: strings.xml  themes.xml
app/app/src/test/java/com/faraz/assessment/: ExampleUnitTest.kt
app/gradle/wrapper/: gradle-wrapper.properties
gl/: GLRenderer.java  ShaderUtils.java  activity_main.xml
jni/: CMakeLists.txt
